# vyno

./: .dockerignore  .env.example  .gitignore  .secrets.baseline  AGENTS.md  CLAUDE.md  Dockerfile  FIREHOSE.md  Makefile  README.md  compose.yaml  pyproject.toml  requirements.txt
.docs/: ADMIN_RUNBOOK.md  ARCHITECTURE.md  PRD.md  ux-synthetic-user-testing-report.md
config/: profile.yaml  sources.yaml
data/: profile.local.example.yaml  sources.local.yaml  x_inbox.example.txt
scripts/: generate-favicons.mjs  security-check.sh  setup.sh  start-app.sh
tests/: test_admin_panel_http.py  test_admin_service.py  test_admin_streamlit.py  test_admin_streamlit_prototype.py  test_bot_health.py  test_config.py  test_dedupe.py  test_docker_assets.py  test_feed_parsing.py  test_github_connector.py  test_github_issue_impact.py  test_logging.py  test_obsidian_paths.py  test_onboarding.py  test_profile_registry.py  test_quality_repair.py  test_quality_repair_runtime.py  test_renderers.py  test_responses_api_summarizer.py  test_runtime_integration.py  test_runtime_window.py  test_runtime_x_budget.py  test_scoring.py  test_scoring_coverage.py  test_selection.py  test_source_preview_store.py  test_source_registry.py  test_source_segmented_rendering.py  test_summarizer_fallback.py  test_summary_validation.py  test_telegram_commands.py  test_timeline_store.py  test_web_cors.py  test_web_live_run_options.py  test_web_payload_binding.py  test_web_post_flows.py  test_web_run_progress.py  test_web_schedule.py  test_web_security.py  test_web_source_health.py  (+6 more)
video/: package-lock.json  (+1 more)
(+487 files in other folders)
